--- a/themes/admin/media/css/stylesheet.css
+++ b/themes/admin/media/css/stylesheet.css
@@ -1,5 +1,6 @@
  body {padding-top: 60px;padding-bottom: 40px;}
 .sidebar-nav {padding: 9px 0;}
+label.error{color:red; font-style:italic;}
 
 /* Sidenav for Docs -------------------------------------------------- */
 .bs-docs-sidenav {
