--- a/themes/adfree/style.css
+++ b/themes/adfree/style.css
@@ -105,6 +105,35 @@ h4 small {
   font-size: 14px;
 }
 
+#footer-back-to-top.offscreen {
+bottom: -100px;
+-moz-transition-duration: 250ms;
+-webkit-transition-duration: 250ms;
+}
+#footer-back-to-top {
+cursor: pointer;
+position: fixed;
+background-color: #EEE;
+z-index: 9999;
+display: block;
+color: #222;
+text-align: center;
+font-size: 13px;
+border: 1px solid #BBB;
+box-shadow: 0 0 0 1px white inset, 0 1px 4px rgba(0, 0, 0, .2);
+-moz-box-shadow: 0 0 0 1px #fff inset, 0 1px 4px rgba(0,0,0,.2);
+-webkit-box-shadow: 0 0 0 1px white inset, 0 1px 4px rgba(0, 0, 0, .2);
+right: 15px;
+bottom: -10px;
+width: 50px;
+padding: 15px 10px 25px;
+-moz-transition: bottom 250ms ease-in-out;
+-webkit-transition: bottom 250ms ease-in-out;
+border-radius: 5px 5px 0 0;
+text-shadow: 0 1px white;
+line-height:16px;
+}
+#footer-back-to-top:hover{text-decoration:none;}
 
 .img-rounded {
   -webkit-border-radius: 0;
@@ -465,7 +494,7 @@ input.search-query {
   line-height: 14px;
   
   vertical-align: top;
-  background-image: url(../adfree/image/syncfusion-icons.png);
+  background-image: url(../image/syncfusion-icons.png);
   background-position: 0 0;
   background-repeat: no-repeat; 
   
