--- a/themes/admin/media/css/stylesheet.css
+++ b/themes/admin/media/css/stylesheet.css
@@ -1,7 +1,17 @@
- body {padding-top: 60px;padding-bottom: 40px;}
+body {padding-top: 60px;padding-bottom: 40px;}
 .sidebar-nav {padding: 9px 0;}
 label.error{color:red; font-style:italic;}
 .middle{vertical-align: middle !important;}
+
+h1,h2,h3{line-height:30px;}
+h1,h2,h3{font-weight:bold;}
+h4,h5,h6{font-weight:normal;}
+/*h1{font-size: 25px !important;}*/
+h1{font-size: 25px !important;}
+h2{font-size: 18px !important;}
+h3{font-size: 16px !important;}
+h4{font-size: 15px !important;}
+
 /* Sidenav for Docs -------------------------------------------------- */
 .bs-docs-sidenav {
   padding: 0;
