--- a/themes/adfree/style.css
+++ b/themes/adfree/style.css
@@ -384,7 +384,7 @@ footer {
     margin-top: 30px;
     padding-top:30px;
     color:#555;
-    background: url(http://e3.s1sf.com/df/0/di/df/bg-footer.png);
+    background: url(../adfree/image/bg-footer.png);
     border-top: 5px solid orange;
 }
 
@@ -409,7 +409,7 @@ footer a:hover {
 footer .verybottom {
     margin-top:30px;
     padding:30px 0 15px;
-    background:#0f0f0f url(http://e3.s1sf.com/df/0/di/df/bg-footer-inside.png);
+    background:#0f0f0f url(../adfree/image/bg-footer-inside.png);
 }
 
 footer .nav-list li, footer .nav-list li a, footer .nav-list li.nav-header {
