--- a/themes/adfree/style.css
+++ b/themes/adfree/style.css
@@ -1,4 +1,5 @@
 body{padding-top: 60px; font-size: 13px!important;}
+a{color:#444;}
 a:hover{text-decoration:none;}
 .well-non{border:none !important; background-color: #fff !important;}
 
@@ -88,6 +89,7 @@ border-radius: 23px;
 opacity: .5;
 filter: alpha(opacity=50);
 }
+.carousel-control i{margin-top:2px;}
 .carousel-inner {
 position: relative;
 width: 100%;
