--- a/themes/adfree/style.css
+++ b/themes/adfree/style.css
@@ -1,7 +1,12 @@
-body{padding-top: 60px; font-size: 13px!important;}
+body{padding-top: 60px; font-size: 13.5px !important;}
 a{color:#444;}
 a:hover{text-decoration:none;}
 .well-non{border:none !important; background-color: #fff !important;}
+
+h1{font-size: 25px !important;}
+h2{font-size: 22px !important;}
+h3{font-size: 20px !important;}
+h4{font-size: 14px !important;}
 
 /************ header ************/
 .head-member{text-align:right;}
@@ -44,7 +49,7 @@ font-size: 30px;
 line-height: 1.3;
 }
 .jumbotron .shameless-self-promotion {
-font-size: 12px;
+font-size: 13px;
 margin-top: 15px;
 color: #f1f1f1;
 opacity:0.9;
