--- a/themes/admin/media/css/stylesheet.css
+++ b/themes/admin/media/css/stylesheet.css
@@ -12,6 +12,10 @@ h2{font-size: 18px !important;}
 h3{font-size: 16px !important;}
 h4{font-size: 15px !important;}
 
+.dd-category a{color: #3074B9 !important; font-weight: bold !important;}
+.dd-category a:hover{color:#ffffff !important;}
+.dd-subcategory a{padding-left:30px !important;}
+
 /* Sidenav for Docs -------------------------------------------------- */
 .bs-docs-sidenav {
   padding: 0;
