--- a/themes/adfree/style.css
+++ b/themes/adfree/style.css
@@ -196,7 +196,7 @@ label.error{color:red; font-style:italic;}
 
 .wraptocenter > img{
     display: block;
-    max-height: 390px; /* add this */
+    max-height: 480px; /* add this */
     margin-left: auto;
     margin-right: auto;
     max-width: 100%;
@@ -228,7 +228,7 @@ border-radius: 4px;
     border: 8px solid #d7d7d7;
     background:#fafafa;
     width: 0.00001%;
-    height: 390px;
+    height: 480px;
 }
 .wrapthumb {
     display: table-cell;
@@ -687,3 +687,8 @@ img.max-img {
 .dribbble {background: url(../adfree/image/social/dribble.png) no-repeat;}
 .flickr {background: url(../adfree/image/social/flickr.png) no-repeat;}
 .twitt {background: url(../adfree/image/social/twitter.png) no-repeat;}
+
+/************** facebook left popup ****************/
+#FBSlideLikeBox_left {background: url(image/fb8-left.png) 292px 0 no-repeat; float: left; height: 90px; position: fixed; left: -292px; padding-right: 28px; top: 20%; width: 292px; z-index: 2000;}
+#FBSlideLikeBox_left #FBSlideLikeBox3_left {height: 400px; right: 0; position: absolute; border: 3px solid #3B5998; width: 292px; background: #f8f8f8;}
+#FBSlideLikeBox_left #FBSlideLikeBox2_left {position: relative; clear: both; width: auto;}
