--- a/themes/adfree/style.css
+++ b/themes/adfree/style.css
@@ -12,17 +12,15 @@ h4{font-size: 14px !important;}
 .head-member{text-align:right;}
 
 /************ jumbotron ************/
-.jumbotron, .jumbotron h1 {
-color: #fff;
-}
+.jumbotron h1{font-size:30px !important;}
 .jumbotron {
 position: relative;
 margin-top: -20px;
 padding: 30px 0;
-color: #fff;
+color: #000;
 text-align: center;
 /*text-shadow: 0 1px 3px rgba(0,0,0,.4), 0 0 30px rgba(0,0,0,.075);*/
-background: orange;
+background: #fff;
 filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#020031', endColorstr='#6d3353',GradientType=1 );
 -webkit-box-shadow: inset 0 3px 7px rgba(0,0,0,.2), inset 0 -3px 7px rgba(0,0,0,.2);
 -moz-box-shadow: inset 0 3px 7px rgba(0,0,0,.2), inset 0 -3px 7px rgba(0,0,0,.2);
@@ -45,7 +43,6 @@ line-height: 1.3;
 .jumbotron .shameless-self-promotion {
 font-size: 13px;
 margin-top: 15px;
-color: #f1f1f1;
 opacity:0.9;
 text-shadow: none;
 }
@@ -98,9 +95,12 @@ overflow: hidden;
 #social-buttons {
 padding: 22px 0;
 text-align: center;
-background-color: #f5f5f5;
+/*background-color: #f5f5f5;
 border-top: 1px solid #fff;
-border-bottom: 1px solid #ddd;
+border-bottom: 1px solid #ddd;*/
+background: #F90;
+/*border-bottom: 1px solid #ce7613;
+border-top: 1px solid #ce7613;*/
 }
 
 /************** pagination ****************/
@@ -245,7 +245,7 @@ label.error{color:red; font-style:italic;}
 .btn-xlarge {
 width: 100%;
 text-align: center;
-padding: 8px 10px 6px 0;
+padding: 8px 0;
 font-size: 44px;
 font-weight: bold;
 line-height: normal;
@@ -579,8 +579,12 @@ footer {
     margin-top: 30px;
     padding-top:30px;
     color:#555;
-    background: url(../adfree/image/bg-footer.png);
+    /*background: url(../adfree/image/bg-footer.png);
     border-top: 5px solid orange;
+    border-top: 1px solid #ccc;*/
+    background-image: -webkit-linear-gradient(top,#f5f5f5,#fff);
+    background-image: -moz-linear-gradient(top,#f5f5f5,#fff);
+    border-top: 1px solid #ccc;
 }
 
 
