--- a/themes/adfree/style.css
+++ b/themes/adfree/style.css
@@ -25,6 +25,8 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#020031', end
 -webkit-box-shadow: inset 0 3px 7px rgba(0,0,0,.2), inset 0 -3px 7px rgba(0,0,0,.2);
 -moz-box-shadow: inset 0 3px 7px rgba(0,0,0,.2), inset 0 -3px 7px rgba(0,0,0,.2);
 box-shadow: inset 0 3px 7px rgba(0,0,0,.2), inset 0 -3px 7px rgba(0,0,0,.2);
+
+background: transparent url("http://blog.homesav.com/wp-content/themes/Kevin/images/background.png") repeat-x center -40px;
 }
 .jumbotron .hero-content {
 text-align: center;
